added core 'wagtail' functionality

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ GOOGLE_SOCIAL_AUTH_CLIENT_KEY='your_google_client_key'
 # -- DOMAINS --------------------------
 LOCAL_DEV_DOMAIN='localhost:8000'
 PROD_DOMAIN='example.com'
+WAGTAILADMIN_BASE_URL='http://example.com'
 
 # -- AllAuth --------------------------
 ACCOUNT_EMAIL_VERIFICATION='mandatory'
